# distenum

./: CONTRIBUTING.md  LICENSE  README.md  example_sentiment_openai.py  pyproject.toml
.github/workflows/: publish-pypi.yml
distenum/: __init__.py  parser.py
docs/: PUBLISHING.md
scripts/: benchmark_parser.py
tests/: conftest.py  test_parser.py
