[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distenum"
version = "0.1.0"
description = "Parse JSON outputs with logprobs from the OpenAI API to convert enum fields into probability distributions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Karan Taneja" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = ["pytest", "ruff"]

[project.urls]
Repository = "https://github.com/ktaneja6/distenum"

[tool.setuptools.packages.find]
where = ["."]
include = ["distenum*"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["distenum", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
